--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -39,6 +39,12 @@
                 opacity: 0.4;
                 margin-right: 0.3em;
             }
+
+            .searchText {
+                color: $font-color-secondary;
+                font-size: 0.85em;
+                font-weight: 300;
+            }
         }
     }
 }
